# flashkernel

./: .gitignore  CMakeLists.txt  DEVELOPMENT_LOG.md  Dockerfile  LICENSE  PROJECT_SPEC.md  README.md  ROADMAP.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
benchmarks/: bench_attention.py  bench_attention_comparison.py  bench_e2e_gpt2.py  bench_fused_gelu.py  bench_kv_cache.py  bench_reduce.py  bench_rope.py  bench_stub.py  harness.py  run_all.sh
flashkernel/: __init__.py
profiling/roofline/: generate_roofline.py  kernel_metrics.json
profiling/scripts/: extract_metrics.py  profile_all.sh
src/bindings/: torch_ext.cpp
src/cuda/: flash_attention.cu  flash_attention.cuh  fused_gelu_linear.cu  fused_gelu_linear.cuh  paged_kv_cache.cu  paged_kv_cache.cuh  reduce.cu  reduce.cuh  rope.cu  rope.cuh  stub.cu  stub.cuh
src/integration/: gpt2_custom_kernels.py
src/triton/: flash_attention.py  fused_gelu_linear.py  paged_kv_cache.py  reduce.py  rope.py
tests/: conftest.py  test_flash_attention.py  test_fused_gelu.py  test_gpt2_integration.py  test_kv_cache.py  test_reduce.py  test_rope.py  test_stub.py  test_triton_attention.py
