[build-system]
requires = ["setuptools>=68.0", "wheel", "torch>=2.0", "ninja"]
build-backend = "setuptools.build_meta"

[project]
name = "flashkernel"
version = "1.0.7"
description = "Custom CUDA C++ and Triton kernels for transformer inference"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Abdeljalil Jliouat", email = "contact@ajliouat.com"},
]
keywords = ["cuda", "triton", "transformer", "attention", "gpu", "inference"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0",
    "triton>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
    "numpy>=1.24",
]
bench = [
    "pandas>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
]
integration = [
    "transformers>=4.30",
    "accelerate>=0.20",
]

[project.urls]
Homepage = "https://ajliouat.com/projects/flashkernel.html"
Repository = "https://github.com/ajliouat/flashkernel"

[tool.setuptools.packages.find]
where = ["."]
include = ["flashkernel*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "cuda: tests that require a CUDA GPU",
    "slow: tests that take more than 10 seconds",
]
